--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 7777",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "start": "next start",
+    "test": "NODE_ENV=test jest --watch"
   },
   "keywords": [],
   "author": "",
