--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,4 +1,5 @@
-endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://recipe-production-bed1fd7521.herokuapp.com/recipe-prod/prod
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
 hooks:
